--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "redirects": [
     {
       "source": "/(.*)",
-      "destination": "https://yourdomain.com/$1",
+      "destination": "https://thegarlicbread.com",
       "permanent": true
     }
   ]
